--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Project</title>
   <link rel="stylesheet" href="css/style.css">
-
   <script src="js/lib/p5.js"></script>
   <script src="js/lib/p5.sound.js"></script>
 </head>
 
 <body>
-  <div id="canvasContainer">
-    <!-- p5 canvas will be appended here! -->
+  <h1>Double Jump</h1>
+  <div id="mainFlex">
+    <p class="left-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Dictumst quisque sagittis purus sit amet. Enim diam vulputate ut pharetra sit.
+      Nunc sed blandit libero volutpat sed cras. Neque aliquam vestibulum morbi blandit. Turpis egestas maecenas
+      pharetra convallis posuere morbi leo urna molestie. Habitasse platea dictumst quisque sagittis purus sit. Cursus
+      euismod quis viverra nibh.</p>
+    <div id="canvasContainer"></div>
+    <p class="right-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Dictumst quisque sagittis purus sit amet. Enim diam vulputate ut pharetra sit.
+      Nunc sed blandit libero volutpat sed cras. Neque aliquam vestibulum morbi blandit. Turpis egestas maecenas
+      pharetra convallis posuere morbi leo urna molestie. Habitasse platea dictumst quisque sagittis purus sit. Cursus
+      euismod quis viverra nibh.</p>
   </div>
-
   <script src="js/script.js"></script>
 </body>
 
