--- a/test.html
+++ b/test.html
@@ -4,65 +4,20 @@
 <head>
 	<title>Flexbox Demo</title>
 	<style>
-		body {
-			font-family: "Arial", sans-serif;
-			margin: 0;
-			padding: 0;
-		}
 
-		h3 {
-			font-family: "Courier New", monospace;
-			color: #333;
-		}
-
-		p {
-			color: #666;
-		}
-
-		.small-box {
-			background-color: #ccc;
-			width: 150px;
-			height: 100px;
-			margin: 10px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-size: 1.5em;
-		}
-
-		.flexible-container {
-			background-color: #f0f0f0;
-			width: 100%;
-			height: 500px;
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: center;
-			align-content: center;
-			align-items: center;
-			padding: 20px;
-		}
-		img {
-            max-width: 50px;
-            height: auto;
-        }
-		@media (max-width: 800px) {
-			.flexible-container{
-			flex-direction: column;
-			}
-  
-}
 	</style>
 </head>
 
 <body>
 
 	<h3>display: flex;</h3>
-	<p>The Flexible Box Layout Module makes it easier to design flexible, responsive layout structures without using floats or positioning.</p>
+	<p>The Flexible Box Layout Module makes it easier to design flexible, responsive layout structures without using
+		floats or positioning.</p>
 
 	<div class="flexible-container">
 		<div class="small-box">01
-			<img src="https://yt3.googleusercontent.com/ytc/AIdro_m52-XqgTKBESLqCUqkozwPxNFxN2VBmuOaDysP5ELPoQ=s900-c-k-c0x00ffffff-no-rj" alt="Placeholder image">
+			<img src="https://yt3.googleusercontent.com/ytc/AIdro_m52-XqgTKBESLqCUqkozwPxNFxN2VBmuOaDysP5ELPoQ=s900-c-k-c0x00ffffff-no-rj"
+				alt="Placeholder image">
 		</div>
 		<div class="small-box">02</div>
 		<div class="small-box">03</div>
